# AirQualityNARM

./: .gitignore  README.md
AirQualityAPI/: app.js  db.js  note.txt  package-lock.json  package.json  settings.json
AirQualityAPI/db/: airQuality.sqbpro  airQuality.sqlite  clean_db.sql  init.sql  notes.txt
AirQualityAPI/routes/: airQuality.js
AirQualityESP/: AirQualityESP.ino
NARM/: algorithms.py  artm_test_dataset.json  data_cat.json  data_narm.json  data_service.py  main.py  output.csv  output.xlsx  pyproject.toml  visualization.py
NARM/data/: apriori_result.csv  apriori_result.xlsx  cleaned-data.csv  data.csv  data.json  data.pickle  data.xlsx  eclat_result.csv  eclat_result_rule_support.csv  result_apriori.csv  result_apriori.xlsx  result_apriori_association_rules.csv  result_apriori_frequent_itemset.csv  result_apriori_item_count.csv  result_apriori_new_association_rules.csv  result_apriori_new_frequent_itemset.csv  result_eclat.csv  result_eclat.xlsx  result_eclat1.xlsx  result_eclatXXX.csv  result_eclat_TIDset.csv  result_eclat_association_rules.csv  result_eclat_frequent_itemsets.csv  result_eclat_item_count.csv  result_eclat_items_total.xlsx  result_eclat_new_association_rules.csv  result_eclat_new_frequent_itemsets.csv  result_eclat_rule_indices.xlsx  result_eclat_rule_support.xlsx  result_eclat_support.csv  result_eclat_top10.csv  result_fp_growth_association_rules.csv  result_fp_growth_frequent_itemset.csv  result_niaarm1_association_rules.csv
