[tool.poetry]
name = "narm"
version = "0.1.0"
description = ""
authors = ["Vito Abeln <vito.abeln@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pandas = "^2.0.0"
mlxtend = "^0.22.0"
apyori = "^1.1.2"
pyeclat = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
