[tool.poetry]
name = "narm"
version = "0.1.0"
description = ""
authors = ["Vito Abeln <vito.abeln@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.3"
requests = "^2.31.0"
openpyxl = "^3.1.2"
apyori = "^1.1.2"
pyECLAT = "^1.0.2"
mlxtend = "^0.22.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
